infra/k3s/prometheus-adapter.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-adapter
  namespace: srecon26-canary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus-adapter
  ports:
    - name: https
      port: 443
      targetPort: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: srecon26-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-adapter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-adapter
    spec:
      serviceAccountName: prometheus-adapter
      containers:
        - name: prometheus-adapter
          image: registry.k8s.io/prometheus-adapter/prometheus-adapter@sha256:932eae60e2bcf9c4660d6442da066ef1a79b4ea7cc232c61c7303069216ca006
          imagePullPolicy: IfNotPresent
          args:
            - --config=/etc/adapter/config.yaml
            - --prometheus-url=http://prometheus.srecon26-canary.svc.cluster.local:9090
            - --secure-port=6443
          ports:
            - name: https
              containerPort: 6443
          volumeMounts:
            - name: config
              mountPath: /etc/adapter
      volumes:
        - name: config
          configMap:
            name: prometheus-adapter-config
